--- a/tours.html
+++ b/tours.html
@@ -38,42 +38,42 @@
                 <div class="price"><i class="fas fa-dollar-sign"></i><span>1299</span></div>
                 <img src="images/tour-img-1.webp" alt="" class="image">
                 <h3 class="name">taj mahal</h3>
-                <p class="address">ajra egypt</p>
+                <p class="address">agra, india</p>
                 <a href="#" class="btn" >send enquiry</a>
             </div>
             <div class="box" data-aos="fade-up">
                 <div class="price"><i class="fas fa-dollar-sign"></i><span>1299</span></div>
                 <img src="images/tour-img-2.webp" alt="" class="image">
                 <h3 class="name">tokyo</h3>
-                <p class="address">ajra egypt</p>
+                <p class="address">tokyo, japan</p>
                 <a href="#" class="btn" >send enquiry</a>
             </div>
             <div class="box" data-aos="fade-up">
                 <div class="price"><i class="fas fa-dollar-sign"></i><span>1299</span></div>
                 <img src="images/tour-img-3.webp" alt="" class="image">
-                <h3 class="name">taj mahal</h3>
-                <p class="address">ajra egypt</p>
+                <h3 class="name">hawaii</h3>
+                <p class="address">hawaii, united state</p>
                 <a href="#" class="btn" >send enquiry</a>
             </div>
             <div class="box" data-aos="fade-up">
                 <div class="price"><i class="fas fa-dollar-sign"></i><span>1299</span></div>
                 <img src="images/tour-img-4.webp" alt="" class="image">
-                <h3 class="name">taj mahal</h3>
-                <p class="address">ajra egypt</p>
+                <h3 class="name">london</h3>
+                <p class="address">england, U.K.</p>
                 <a href="#" class="btn" >send enquiry</a>
             </div>
             <div class="box" data-aos="fade-up">
                 <div class="price"><i class="fas fa-dollar-sign"></i><span>1299</span></div>
                 <img src="images/tour-img-5.webp" alt="" class="image">
-                <h3 class="name">taj mahal</h3>
-                <p class="address">ajra egypt</p>
+                <h3 class="name">lotus temple</h3>
+                <p class="address">new delhi, india</p>
                 <a href="#" class="btn" >send enquiry</a>
             </div>
             <div class="box" data-aos="fade-up">
                 <div class="price"><i class="fas fa-dollar-sign"></i><span>1299</span></div>
                 <img src="images/tour-img-6.webp" alt="" class="image">
-                <h3 class="name">taj mahal</h3>
-                <p class="address">ajra egypt</p>
+                <h3 class="name">Arc de Triomphe</h3>
+                <p class="address">Paris, France</p>
                 <a href="#" class="btn" >send enquiry</a>
             </div>
         </section>
